--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id 'io.qameta.allure' version '2.10.0'
+    id 'io.qameta.allure' version '2.11.2'
     id "io.freefair.lombok" version "6.0.0-m2"
 }
 
@@ -8,9 +8,9 @@ repositories {
     mavenCentral()
 }
 
-def selenideVersion = "6.15.0",
+def selenideVersion = "6.13.0",
         restAssuredVersion = "5.3.0",
-        allureVersion = "2.19.0",
+        allureVersion = "2.21.0",
         junitVersion = "5.9.3",
         slf4jVersion = "2.0.7"
 
@@ -30,9 +30,9 @@ allure {
 
 dependencies {
     testImplementation (
-//            "com.codeborne:selenide:$selenideVersion",
-//            "io.qameta.allure:allure-selenide:$allureVersion",
-            "io.appium:java-client:7.6.0",
+            "com.codeborne:selenide:$selenideVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "io.appium:java-client:8.3.0",
             "io.rest-assured:rest-assured:$restAssuredVersion",
             "io.qameta.allure:allure-rest-assured:$allureVersion",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
